@@ -2,17 +2,17 @@ Package: HAC
 Type: Package
 Title: Estimation, simulation and visualization of Hierarchical
         Archimedean Copulae (HAC)
-Version: 0.1-8
+Version: 0.1-9
 Date: 2011-12-05
 Author: Ostap Okhrin <ostap.okhrin@wiwi.hu-berlin.de> and Alexander Ristig <ristigal@cms.hu-berlin.de>
 Maintainer: Ostap Okhrin <ostap.okhrin@wiwi.hu-berlin.de>
 Lazyload: yes
 Depends: R (>= 2.14.0), copula, mnormt
-Imports: fBasics, graphics
+Imports: graphics, stabledist
 Description: Package provides the estimation of the structure and the parameters, simulation methods and structural plots of high-dimensional Hierarchical Archimedean Copulae (HAC).
 License: GPL (>= 3)
 URL:
         http://lehre.wiwi.hu-berlin.de/Professuren/quantitativ/statistik/members/personalpages/o2
-Packaged: 2011-12-05 15:07:55 UTC; Alex
+Packaged: 2011-12-24 16:12:47 UTC; Alex
 Repository: CRAN
-Date/Publication: 2011-12-05 18:56:20
+Date/Publication: 2011-12-25 18:38:53
