@@ -43,6 +43,6 @@ S3method(print, hac)
 S3method(aggregate, hac)
 export("plot.hac", "print.hac", "aggregate.hac")
 
-importFrom("fBasics", rstable)
+importFrom("stabledist", rstable)
 importFrom("graphics", plot)
 importFrom("stats", aggregate, ecdf, dbeta, pbeta, dcauchy, pcauchy, dchisq, pchisq, df, pf, dgamma, pgamma, dlnorm, plnorm, dnorm, pnorm, qnorm, dt, pt, dexp, pexp, dweibull, pweibull)
